@@ -4,7 +4,9 @@ Change History
 3.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Refactor egg faking; fix skipped eggs to avoid to remove skipped
+  develop eggs
+  [gotcha]
 
 
 3.1 (2009-06-23)
